rust/src/bindings.rs

extern "C" { pub fn bitd1dec8 (p : * mut u8 , n : :: std :: os :: raw :: c_uint , start : u8) ; }
extern "C" { pub fn bitd1dec16 (p : * mut u16 , n : :: std :: os :: raw :: c_uint , start : u16) ; }
extern "C" { pub fn bitd1dec32 (p : * mut u32 , n : :: std :: os :: raw :: c_uint , start : u32) ; }
extern "C" { pub fn bitd1dec64 (p : * mut u64 , n : :: std :: os :: raw :: c_uint , start : u64) ; }
extern "C" { pub fn bitdi8 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , px : * mut u8 , start : u8) -> u8 ; }
extern "C" { pub fn bitdi16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , px : * mut u16 , start : u16) -> u16 ; }
extern "C" { pub fn bitdi32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , px : * mut u32 , start : u32) -> u32 ; }
extern "C" { pub fn bitdi64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , px : * mut u64 , start : u64) -> u64 ; }
extern "C" { pub fn bitdienc8 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , out : * mut u8 , start : u8 , mindelta : u8) -> u8 ; }
extern "C" { pub fn bitdienc16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , out : * mut u16 , start : u16 , mindelta : u16) -> u16 ; }
extern "C" { pub fn bitdienc32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , out : * mut u32 , start : u32 , mindelta : u32) -> u32 ; }
extern "C" { pub fn bitdienc64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , out : * mut u64 , start : u64 , mindelta : u64) -> u64 ; }
extern "C" { pub fn bitdidec8 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , start : u8 , mindelta : u8) ; }
extern "C" { pub fn bitdidec16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , start : u16 , mindelta : u16) ; }
extern "C" { pub fn bitdidec32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , start : u32 , mindelta : u32) ; }
extern "C" { pub fn bitdidec64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , start : u64 , mindelta : u64) ; }
extern "C" { pub fn bitf8 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , px : * mut u8 , start : u8) -> u8 ; }
extern "C" { pub fn bitf16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , px : * mut u16 , start : u16) -> u16 ; }
extern "C" { pub fn bitf32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , px : * mut u32 , start : u32) -> u32 ; }
extern "C" { pub fn bitf64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , px : * mut u64 , start : u64) -> u64 ; }
extern "C" { pub fn bitf18 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , px : * mut u8 , start : u8) -> u8 ; }
extern "C" { pub fn bitf116 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , px : * mut u16 , start : u16) -> u16 ; }
extern "C" { pub fn bitf132 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , px : * mut u32 , start : u32) -> u32 ; }
extern "C" { pub fn bitf164 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , px : * mut u64 , start : u64) -> u64 ; }
extern "C" { pub fn bitfm8 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , px : * mut u8 , pmin : * mut u8) -> u8 ; }
extern "C" { pub fn bitfm16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , px : * mut u16 , pmin : * mut u16) -> u16 ; }
extern "C" { pub fn bitfm32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , px : * mut u32 , pmin : * mut u32) -> u32 ; }
extern "C" { pub fn bitfm64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , px : * mut u64 , pmin : * mut u64) -> u64 ; }
extern "C" { pub fn bitz8 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , px : * mut u8 , start : u8) -> u8 ; }
extern "C" { pub fn bitz16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , px : * mut u16 , start : u16) -> u16 ; }
extern "C" { pub fn bitz32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , px : * mut u32 , start : u32) -> u32 ; }
extern "C" { pub fn bitz64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , px : * mut u64 , start : u64) -> u64 ; }
extern "C" { pub fn bitz256v32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , px : * mut u32 , start : u32) -> u32 ; }
extern "C" { pub fn bitzenc8 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , out : * mut u8 , start : u8 , mindelta : u8) -> u8 ; }
extern "C" { pub fn bitzenc16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , out : * mut u16 , start : u16 , mindelta : u16) -> u16 ; }
extern "C" { pub fn bitzenc32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , out : * mut u32 , start : u32 , mindelta : u32) -> u32 ; }
extern "C" { pub fn bitzenc64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , out : * mut u64 , start : u64 , mindelta : u64) -> u64 ; }
extern "C" { pub fn bitzdec8 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , start : u8) ; }
extern "C" { pub fn bitzdec16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , start : u16) ; }
extern "C" { pub fn bitzdec32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , start : u32) ; }
extern "C" { pub fn bitzdec64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , start : u64) ; }
extern "C" { pub fn bitzz8 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , px : * mut u8 , start : u8) -> u8 ; }
extern "C" { pub fn bitzz16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , px : * mut u16 , start : u16) -> u16 ; }
extern "C" { pub fn bitzz32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , px : * mut u32 , start : u32) -> u32 ; }
extern "C" { pub fn bitzz64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , px : * mut u64 , start : u64) -> u64 ; }
extern "C" { pub fn bitzzenc8 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , out : * mut u8 , start : u8 , mindelta : u8) -> u8 ; }
extern "C" { pub fn bitzzenc16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , out : * mut u16 , start : u16 , mindelta : u16) -> u16 ; }
extern "C" { pub fn bitzzenc32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , out : * mut u32 , start : u32 , mindelta : u32) -> u32 ; }
extern "C" { pub fn bitzzenc64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , out : * mut u64 , start : u64 , mindelta : u64) -> u64 ; }
extern "C" { pub fn bitzzdec8 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , start : u8) ; }
extern "C" { pub fn bitzzdec16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , start : u16) ; }
extern "C" { pub fn bitzzdec32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , start : u32) ; }
extern "C" { pub fn bitzzdec64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , start : u64) ; }
extern "C" { pub fn bitx8 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , px : * mut u8 , start : u8) -> u8 ; }
extern "C" { pub fn bitx16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , px : * mut u16 , start : u16) -> u16 ; }
extern "C" { pub fn bitx32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , px : * mut u32 , start : u32) -> u32 ; }
extern "C" { pub fn bitx64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , px : * mut u64 , start : u64) -> u64 ; }
extern "C" { pub fn bitx256v32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , px : * mut u32 , start : u32) -> u32 ; }
extern "C" { pub fn bitxenc8 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , out : * mut u8 , start : u8) -> u8 ; }
extern "C" { pub fn bitxenc16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , out : * mut u16 , start : u16) -> u16 ; }
extern "C" { pub fn bitxenc32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , out : * mut u32 , start : u32) -> u32 ; }
extern "C" { pub fn bitxenc64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , out : * mut u64 , start : u64) -> u64 ; }
extern "C" { pub fn bitxdec8 (p : * mut u8 , n : :: std :: os :: raw :: c_uint , start : u8) ; }
extern "C" { pub fn bitxdec16 (p : * mut u16 , n : :: std :: os :: raw :: c_uint , start : u16) ; }
extern "C" { pub fn bitxdec32 (p : * mut u32 , n : :: std :: os :: raw :: c_uint , start : u32) ; }
extern "C" { pub fn bitxdec64 (p : * mut u64 , n : :: std :: os :: raw :: c_uint , start : u64) ; }
extern "C" { pub fn bitxenc (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , esize : :: std :: os :: raw :: c_uint) ; }
extern "C" { pub fn bitxdec (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , esize : :: std :: os :: raw :: c_uint) ; }
extern "C" { pub fn bitzenc (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , esize : :: std :: os :: raw :: c_uint) ; }
extern "C" { pub fn bitzdec (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , esize : :: std :: os :: raw :: c_uint) ; }
extern "C" { pub fn _fprazor32 (d : f32 , e : f32 , lg2e : :: std :: os :: raw :: c_int) -> f32 ; }
extern "C" { pub fn _fprazor64 (d : f64 , e : f64 , lg2e : :: std :: os :: raw :: c_int) -> f64 ; }
extern "C" { pub fn fprazor32 (in_ : * mut f32 , n : :: std :: os :: raw :: c_uint , out : * mut f32 , e : f32) ; }
extern "C" { pub fn fprazor64 (in_ : * mut f64 , n : :: std :: os :: raw :: c_uint , out : * mut f64 , e : f64) ; }
extern "C" { pub fn efanoenc32 (in_ : * mut :: std :: os :: raw :: c_uint , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn efanoenc64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : u64) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn efanodec32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn efanodec64 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u64 , start : u64) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn efano1enc32 (in_ : * mut :: std :: os :: raw :: c_uint , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn efano1enc64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : u64) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn efano1dec32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn efano1dec64 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut u64 , start : u64) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn efanoenc128v32 (in_ : * mut :: std :: os :: raw :: c_uint , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn efanodec128v32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn efano1enc128v32 (in_ : * mut :: std :: os :: raw :: c_uint , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn efano1dec128v32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uint , start : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
